# xdelta

./: .gitignore  README.md
xdelta3/: .gitignore  Makefile.am  configure  configure.ac  xdelta3-config.h.in  xdelta3.c  xdelta3.h
